feat: Use fence to synchronize buffer queue
Use EGL fences to synchronize the buffer queue between the producer and consumer. This ensures that the producer does not overwrite a buffer that is still being used by the consumer.

This change also updates the ChildSurface to use the fence when presenting an image to the SurfaceFlinger. This ensures that the SurfaceFlinger does not display a buffer that is still being written to by the producer.

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -30,6 +30,8 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         BufferQueue.h
         ChildSurface.cc
         ChildSurface.h
+        GLFence.cc
+        GLFence.h
         HelloSurfaceControl.cc
         HelloSurfaceControl.h
         Matrix.h)
@@ -46,7 +48,8 @@ target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE
 # build script, prebuilt third-party libraries, or Android system libraries.
 target_link_libraries(${CMAKE_PROJECT_NAME}
         android
-        egl
+        EGL
+        GLESv2
         GLESv3
         log
         vulkan)
