Refactor: Introduce ScopedFd to manage fence FDs
This change introduces a new class, `ScopedFd`, to manage file descriptors, particularly those associated with fences.

This refactor aims to improve resource management by ensuring that fence FDs are properly closed when they are no longer needed.

Additionally, `ScopedFd` is utilized in the `BufferQueue` and `GLFence` classes to handle fence FDs more safely and efficiently.

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -34,7 +34,8 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         GLFence.h
         HelloSurfaceControl.cc
         HelloSurfaceControl.h
-        Matrix.h)
+        Matrix.h
+        ScopedFd.h)
 
 # Specifies defines for the compiler
 target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE
